opam-version: "2.0"
name:         "opam-dot"
maintainer:   "Gabriel Radanne <drupyog@zoho.com>"
authors:      [ "Gabriel Radanne" ]
homepage:     "https://github.com/Drup/opam-dot"
bug-reports:  "https://github.com/Drup/opam-dot/issues"
dev-repo:     "git+https://github.com/Drup/opam-dot.git"
synopsis: "OPAM dependencies as graphs"
license: "MIT"
version: "dev"
flags: plugin
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
depends: [
  "ocamlfind" {build}
  "dune" {build}
  "opam-state" {>= "2.0.1"}
  "bos"
]
